full article pop

--- a/_dev/html/components/shared-tmpls.html
+++ b/_dev/html/components/shared-tmpls.html
@@ -38,6 +38,10 @@
         <img src="<%= icon %>" alt="" class="a-icon"/>
     </div>
 </script>
+<script type="text/template" id="full-article-template">
+    <div class="h"><span><%= h %></span></div>
+    <div class="text"><%= text %></div>
+</script>
 <script type="text/template" id="ext-player-template">
     <input type="checkbox" />
     <img class="icon" src="images/icons/icon-bookmark.svg" alt=""/>
