--- a/_dev/html/components/shared.html
+++ b/_dev/html/components/shared.html
@@ -39,6 +39,25 @@
 <div class="achievement-pop">
     <div class="into"></div>
 </div>
+<div class="article-pop">
+    <div class="into"></div>
+</div>
+<div class="full-article-pop">
+    <div class="bg"></div>
+    <div class="content">
+        <div class="close"></div>
+        <div class="back"></div>
+        <div class="more"></div>
+        <div class="container">
+            <div class="t-scroll-wrap">
+                <div class="t-scroll-inner">
+                
+                </div>
+            </div>
+            <div class="t-scroll-bar"><div></div></div>
+        </div>
+    </div>
+</div>
 <div class="info-pop">
     <div class="caller"></div>
     <div class="inner">
