--- a/_dev/scss/components/_video.scss
+++ b/_dev/scss/components/_video.scss
@@ -13,6 +13,9 @@
     .nope &{
       pointer-events:none;
     }
+    video{
+      outline :none;
+    }
     .b-b,.f-b{
       width:3rem;
       height:3rem;
@@ -25,12 +28,12 @@
     }
     .b-b{
       order:1;
-      margin:0 6em 0 auto;
+      margin:0 5em 0 auto;
       background-image:url(#{$path}/player/icon-back.svg);
     }
     .f-b{
       order:3;
-      margin:0 auto 0 6em;
+      margin:0 auto 0 5em;
       background-image:url(#{$path}/player/icon-forward.svg);
     }
     .cust-t{
