full article pop

--- a/_dev/html/components/shared-tmpls.html
+++ b/_dev/html/components/shared-tmpls.html
@@ -40,7 +40,7 @@
 </script>
 <script type="text/template" id="full-article-template">
     <div class="h"><span><%= h %></span></div>
-    <div class="text"><%= text %></div>
+    <%= pop %>
 </script>
 <script type="text/template" id="ext-player-template">
     <input type="checkbox" />
