--- a/css/style.css
+++ b/css/style.css
@@ -938,7 +938,6 @@ body {
   position: absolute;
   top: 3em;
   right: 2.95rem;
-  text-align: center;
   width: 3rem;
   height: 3rem;
   cursor: pointer;
@@ -958,7 +957,7 @@ body {
   bottom: 0;
   padding: 8em 0 4em 0;
   opacity: 0;
-  background: rgba(255, 255, 255, 0.1);
+  background: #000;
   display: flex;
   font-size: 0.6em;
 }
@@ -2006,13 +2005,79 @@ body {
   top: 4em;
   transform: translate(-50%, 0);
   bottom: 4em;
-  width: 40em;
+  width: 34em;
   background: #fff;
-  padding: 1.5em;
+}
+.full-article-pop .close {
+  position: absolute;
+  top: 0.5em;
+  right: 0.5em;
+  width: 2.3rem;
+  height: 2.3rem;
+  cursor: pointer;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  background: #000 url(../images//icons/icon-close.svg) center/cover no-repeat;
+}
+@media (min-width: 1024px) {
+  .full-article-pop .back, .full-article-pop .more {
+    font-size: 0.7em;
+  }
+}
+.full-article-pop .back {
+  color: #03c953;
+  position: absolute;
+  left: 2em;
+  bottom: 2em;
+  cursor: pointer;
+  background: linear-gradient(90deg,#03c953 1px,transparent 1px,transparent 1px) left calc(100% - 0px)/2px 1px repeat-x;
+}
+.full-article-pop .more {
+  color: #03c953;
+  position: absolute;
+  right: 3.5em;
+  bottom: 2em;
+  cursor: pointer;
+  background: linear-gradient(90deg,#03c953 1px,transparent 1px,transparent 1px) left calc(100% - 0px)/2px 1px repeat-x;
+}
+.full-article-pop .more:before {
+  content: "→";
+  position: absolute;
+  right: -1.5em;
 }
 .full-article-pop .container {
   overflow: hidden;
-  position: relative;
+  position: absolute;
+  left: 1.5em;
+  top: 5.5em;
+  right: 1.5em;
+  bottom: 3.5em;
+}
+.full-article-pop .h {
+  font-weight: 700;
+  text-transform: uppercase;
+  position: fixed;
+  left: 50%;
+  top: 1.4em;
+  width: 80%;
+  margin-left: -15.5em;
+}
+.full-article-pop .h span {
+  font-size: 2.4em;
+}
+@media (min-width: 1024px) {
+  .full-article-pop .text {
+    font-size: 0.7em;
+  }
+}
+.full-article-pop .text:not(:first-child) {
+  margin-top: 1em;
+}
+.full-article-pop .img {
+  margin-top: 2em;
+  height: 6em;
+}
+.full-article-pop .img img {
+  width: 100%;
   height: 100%;
 }
 .full-article-pop .t-scroll-bar {
