info-pop lottie

--- a/_dev/html/components/shared.html
+++ b/_dev/html/components/shared.html
@@ -61,6 +61,7 @@
 <div class="info-pop">
     <div class="caller"></div>
     <div class="inner">
+        <div class="lottie"></div>
         <div class="tabs">
             <div><span>Сохранение</span></div>
             <div><span>Загрузка</span></div>
