--- a/_dev/html/components/shared.html
+++ b/_dev/html/components/shared.html
@@ -30,33 +30,12 @@
 <div class="loader-pop">
     <div class="l"></div>
 </div>
-<div class="orientation-pop">
-    <div class="text">
-        Поверните устройство в горизонтальное положение или используйте компьютер.
-    </div>
-</div>
 <div class="special-btns"><div class="inner"></div></div>
 <div class="achievement-pop">
     <div class="into"></div>
 </div>
 <div class="article-pop">
     <div class="into"></div>
-</div>
-<div class="full-article-pop">
-    <div class="bg"></div>
-    <div class="content">
-        <div class="container">
-            <div class="t-scroll-wrap">
-                <div class="t-scroll-inner">
-                
-                </div>
-            </div>
-            <div class="t-scroll-bar"><div></div></div>
-        </div>
-        <div class="close"></div>
-        <div class="back"><span>Вернуться</span></div>
-        <div class="more"><span>Больше карточек</span></div>
-    </div>
 </div>
 <div class="info-pop">
     <div class="caller"></div>
@@ -143,6 +122,70 @@
                 <div class="t-scroll-bar"><div></div></div>
             </div>
         </div>
+    </div>
+</div>
+<div class="full-article-pop">
+    <div class="bg"></div>
+    <div class="content">
+        <div class="container">
+            <div class="t-scroll-wrap">
+                <div class="t-scroll-inner">
+                
+                </div>
+            </div>
+            <div class="t-scroll-bar"><div></div></div>
+        </div>
+        <div class="close"></div>
+        <div class="back"><span>Вернуться</span></div>
+        <div class="more"><span>Больше карточек</span></div>
+    </div>
+</div>
+<div class="game-pop">
+    <div class="caller"></div>
+    <div class="inner">
+        <div class="block">
+            <div class="choose">
+                <div>Денис</div>
+                <img src="images/startscreen-btn.png" alt=""/>
+            </div>
+            <div class="choose">
+                <div>Ольга</div>
+                <img src="images/game/girl.jpg" alt=""/>
+            </div>
+            <div class="ch-text">Выбери персонажа</div>
+            <div class="ch-text">
+                Text text text text text text text text text text text text text text text text text text text
+                <br/><br/>
+                Text text text text text text text text <b>AKZM</b>
+            </div>
+        </div>
+        <div class="block">
+            <div class="g-bg">
+                <img src="images/startscreen-btn.png" alt=""/>
+                <img src="images/game/girl.jpg" alt=""/>
+            </div>
+            <div class="tmp"></div>
+        </div>
+        <div class="block">
+            <div class="score">
+                <div class="s-h">Лучший среди всех игроков</div>
+                <div class="s-digits">
+                    <div>11</div>
+                </div>
+            </div>
+            <div class="score">
+                <div class="s-h">Твой результат</div>
+                <div class="s-digits">
+                    <div>20</div>
+                </div>
+            </div>
+            <div class="btn">Сыграть еще раз</div>
+        </div>
+    </div>
+</div>
+<div class="orientation-pop">
+    <div class="text">
+        Поверните устройство в горизонтальное положение или используйте компьютер.
     </div>
 </div>
 
