--- a/_dev/scss/base/_rules.scss
+++ b/_dev/scss/base/_rules.scss
@@ -20,7 +20,7 @@
   }
   @font-face{
     font-family:Digits;
-    src:url("../fonts/7_digit.ttf") format("truetype");
+    src:url("../fonts/digital-7mono.ttf") format("truetype");
   }
 
   .safe-hide-svg{
